k8s/security/quantum-security.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: quantum-resistant-auth
  namespace: support-sphere
spec:
  mtls:
    mode: STRICT
  portLevelMtls:
    "443":
      mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: quantum-resistant-tls
  namespace: support-sphere
spec:
  host: "*.support-sphere.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
      cipherSuites:
      - ECDHE-ECDSA-AES256-GCM-SHA384
      - ECDHE-RSA-AES256-GCM-SHA384
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: advanced-threat-detection
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/api/.*"
          headers:
          - 'X-Real-IP'
          - 'X-Forwarded-For'
          - 'X-Content-Type-Options: nosniff'
